Fix product service tests