@@ -6,14 +6,11 @@ import br.ufrn.imd.markethub.service.product.dto.ErrorDto;
 import br.ufrn.imd.markethub.service.product.dto.ProductDto;
 import br.ufrn.imd.markethub.service.product.exception.ServerException;
 import br.ufrn.imd.markethub.service.product.repository.ProductRepository;
-import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -22,14 +19,14 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository repository;
 
     public List<ProductDto> findAllAvailableProducts() {
-        List<Product> products = repository.findAll();
+        final List<Product> products = repository.findAll();
         return products.stream()
                 .map(ProductServiceImpl::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ProductDto findProductById(UUID id) {
-        Product product = repository.findById(id)
+        final Product product = repository.findById(id)
                 .orElseThrow(ServerException::notFound);
         return toDto(product);
     }
@@ -44,9 +41,8 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    @Transactional
     public void processCheckoutDone(CheckoutDoneDto checkoutDoneDto) {
-        Product product = repository.findById(checkoutDoneDto.getProductId())
+        final Product product = repository.findById(checkoutDoneDto.getProductId())
                 .orElseThrow(() -> new ServerException(new ErrorDto(404, "Product not found")));
 
         if (product.getQuantity() < checkoutDoneDto.getQuantity()) {
